# bcr-frontend

./: .bazelrc  .gitignore  .npmrc  BUILD.bazel  CLAUDE.md  Cargo.toml  MODULE.bazel  Makefile  README.md  biome.json  go.mod  go.sum  package.json  rules_proto_config.yaml  urls.txt
.github/workflows/: check-runner-health.yml  ci.bazelrc  ci.yaml  deploy-and-merge-bcr-pr.yaml  deploy-ghpages.yml  generate-all-docs.yml  periodic-submodule-sync.yaml  publish.yaml  release.yaml  release_ruleset.yaml  trigger-via-bcr.yml  update-bcr-submodule.yaml
app/api/: BUILD.bazel  Cargo.toml  deploy.sh  wrangler.toml
app/api/src/: lib.rs  registry.rs  routes.rs
app/bcr/: BUILD.bazel  app.js  app.soy  bazel.js  bazel_flags.js  body.js  common.js  documentation.js  documentation_search.js  format.js  githubsourcefile.js  home.js  index.html  main.js  maintainers.js  maintainers.soy  markdown.js  module_search.js  modules.js  mvs.js  mvs_tree.js  packages.js  packages.soy  presubmit.js  primer_safelist.txt  refresh.js  registry.js  registry.soy  registry_test.js  search.js  selectnav.js  settings.js  settings.soy  source_archive_files.js  starlark.js  starlark_test.js  style.closure.css  style.css  syntax.js  targets.js  (+7 more)
bazel_tools/biome/: biome.bzl
bazel_tools/formatting/: biome.bzl
bazel_tools/rust/: BUILD.bazel  proto_rust_library.bzl
blaze/worker/: BUILD.bazel
builtin/: BUILD.bazel  builtin.pb.go  builtin.proto
cmd/attestationscompiler/: BUILD.bazel  attestationscompiler.go  attestationscompiler_test.go
cmd/attestationscompiler/testdata/: attestations.json
cmd/bazelflagdbcompiler/: BUILD.bazel  bazelflagdbcompiler.go
cmd/bazelhelpcompiler/: bazelhelpcompiler.go
cmd/bazelhelpregistrycompiler/: bazelhelpregistrycompiler.go
cmd/bazelisk/: BUILD.bazel  bazelisk.go
cmd/builtininfocompiler/: BUILD.bazel  main.go  reshape.go  server.go
cmd/builtinscompiler/: BUILD.bazel  builtin.pb  main.go
cmd/builtinsmerger/: BUILD.bazel  main.go
cmd/bzlcompiler/: BUILD.bazel  bzlcompiler.go  config.go  extract.go  extract_test.go  files.go
cmd/cfdeploy/: main.go
cmd/codesearch/: BUILD.bazel
cmd/codesearchcompiler/: BUILD.bazel
cmd/colorcompiler/: BUILD.bazel
cmd/csspurge/: BUILD.bazel  Cargo.toml
cmd/csspurge/src/: main.rs
cmd/cssusage/: BUILD.bazel  main.go
cmd/documentationcompiler/: BUILD.bazel
cmd/documentationregistrycompiler/: BUILD.bazel  main.go
cmd/modulecompiler/: modulecompiler.go
cmd/moduleregistrypackagescompiler/: BUILD.bazel  main.go
cmd/moduleregistrysymbolscompiler/: main.go
cmd/moduleversioncompiler/: BUILD.bazel  moduleversioncompiler.go
cmd/octiconcompiler/: octiconcompiler.go
cmd/packagecompiler/: BUILD.bazel  config.go  extract.go  files.go  packagecompiler.go  server.go
cmd/registrycompiler/: BUILD.bazel  registrycompiler.go
cmd/releasecompiler/: BUILD.bazel  releasecompiler.go
cmd/releaseserver/: main.go
cmd/renderer/app/: BUILD.bazel  app.js  app.soy  index.css  index.html  main.js  registry.soy  search.js
cmd/renderhtml/: BUILD.bazel
cmd/sitemapcompiler/: BUILD.bazel  sitemapcompiler.go
cmd/sitemapindexcompiler/: BUILD.bazel  sitemapindexcompiler.go
cmd/stardoccompiler/: BUILD.bazel  main.go
cmd/starlarkcompiler/: BUILD.bazel  main.go
cmd/starlarkcompiler/tests/: BUILD.bazel
cmd/statichtmlcompiler/: BUILD.bazel  main.go
cmd/uiversion/: BUILD.bazel  main.go
cmd/wranglerdeploy/: BUILD.bazel  wrangler.js
data/: bazel_tools.MODULE.bazel  generated.MODULE.bazel
data/starlark/: BUILD.bazel
language/bcr/: BUILD.bazel  archive_override.go  attestations.go  attestations_fetch.go  attestations_fetch_test.go  bazel.go  bcr.go  config.go  git_override.go  github.go  graph.go  lifecycle.go  local_path_override.go  module.go  module_attestations.go  module_commit.go  module_dependency.go  module_dependency_cycle.go  module_id.go  module_key.go  module_maintainer.go  module_metadata.go  module_presubmit.go  module_registry.go  module_source.go  module_version.go  mvs.go  pr_author_cache.go  presubmit.go  proto_rule.go  registry_backup.go  repository.go  repository_metadata.go  repository_metadata_cache.go  resource_status_cache.go  single_version_override.go  siterepo.go  stardoc.go  stardoc_test.go
pkg/attestationsjson/: BUILD.bazel  attestationsjson.go
pkg/cf/: BUILD.bazel  assets.go  workers.go
pkg/codesearch/: BUILD.bazel
pkg/gh/: BUILD.bazel  gh.go
pkg/git/: git.go
pkg/gl/: gl.go
pkg/intoto/: BUILD.bazel  cert.go  parse.go  parse_test.go  types.go
pkg/intoto/testdata/: re-bzl-0.2.0-source.intoto.jsonl
pkg/metadatajson/: BUILD.bazel  metadatajson.go
pkg/modulebazel/: BUILD.bazel  modulebazel.go  predeclared.go
pkg/netutil/: BUILD.bazel
pkg/paramsfile/: BUILD.bazel  paramsfile.go
pkg/presubmityml/: BUILD.bazel  presubmityml.go
pkg/protoutil/: BUILD.bazel  delimited_test.go  io.go  io_test.go
pkg/sourcejson/: BUILD.bazel  sourcejson.go
pkg/stardoc/: BUILD.bazel  dedent.go  dedent_test.go  label.go  stardoc.go  symbols.go
pkg/status/: BUILD.bazel
rules/: BUILD.bazel  archive_override.bzl  bazel_version.bzl  cloudflare.bzl  css_purge.bzl  deploy.bzl  ghpages.bzl  git_override.bzl  local_path_override.bzl  module_attestations.bzl  module_commit.bzl  module_dependency.bzl  module_metadata.bzl  module_registry.bzl  module_source.bzl  module_version.bzl  prerender.bzl  providers.bzl  release.bzl  repository_metadata.bzl  route_info.bzl  single_version_override.bzl  ui_version.bzl
stardoc_output/: BUILD.bazel  stardoc_output.pb.go
tools/: workspace_status.sh
tools/rust/: Cargo.toml
