load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@build_stack_rules_proto//rules:proto_compile_assets.bzl", "proto_compile_assets")
load("@build_stack_rules_proto//rules:proto_gazelle.bzl", "proto_gazelle")
load("@build_stack_rules_proto//rules:starlark_bundle.bzl", "starlark_bundle")
load("@npm//:defs.bzl", "npm_link_all_packages")

exports_files([
    "rules_proto_config.yaml",
    "protobuf_javascript.patch",
])

# ----------------------------------------------------
# NPM Dependencies
# ----------------------------------------------------

npm_link_all_packages(name = "node_modules")

# ----------------------------------------------------
# Gazelle
# ----------------------------------------------------
#
# -- Gazelle language "walk" ---
# gazelle:exclude thirdparty
#
# -- Gazelle language "go" ---
# gazelle:prefix github.com/stackb/centrl
# gazelle:go_generate_proto false
#
# -- Gazelle language "protobuf" ---
# gazelle:proto_language go enable true
#
# -- Gazelle language "starlark_bundle" ---
# gazelle:starlark_bundle_root
# gazelle:starlark_bundle_exclude data
# gazelle:starlark_bundle_exclude modules

gazelle_binary(
    name = "gazelle-custom",
    languages = [
        "@bazel_gazelle//language/go",
        "@bazel_gazelle//language/proto",
        "@build_stack_rules_proto//language/protobuf",
        "@build_stack_rules_proto//language/starlarkbundle",
    ],
    visibility = ["//visibility:public"],
)

proto_gazelle(
    name = "gazelle",
    cfgs = ["//:rules_proto_config.yaml"],
    data = ["@registry_pb//file"],
    external = "static",
    gazelle = "//:gazelle-custom",
)

gazelle_binary(
    name = "gazelle-bcr",
    languages = ["//language/bcr"],
    visibility = ["//visibility:public"],
)

bcr_exclude_dirs = [
    ".*",
    "app",
    "blaze",
    "build",
    "cmd",
    "language",
    "pkg",
    "rules",
    "thirdparty",
    "stardoc_output",
    "tools",
]

gazelle(
    name = "central_registry",
    args = [
        "--registry-file=$(rootpath @registry_pb//file)",
        "--registry-root=data/bazel-central-registry",
        "--registry-url=https://registry.bazel.build",
        "--exclude=.cache",  # exists in CI?
        "--exclude=$HOME",  # exists in CI?
        "--exclude=modules",
    ] + ["--exclude=" + dir for dir in bcr_exclude_dirs],
    data = ["@registry_pb//file"],
    gazelle = "//:gazelle-bcr",
)

gazelle(
    name = "local_registry",
    args = [
        "--registry-root=modules",
        "--registry-url=http://localhost:8080",
        "--exclude=data",
    ] + ["--exclude=" + dir for dir in bcr_exclude_dirs],
    gazelle = "//:gazelle-bcr",
)

# ProTip: bazel run //:proto_assets (to regenerate .pb.go files)
proto_compile_assets(
    name = "proto_assets",
    deps = [
        "//build/stack/bazel/bzlmod/v1:bzpb_go_compiled_sources",
        "//build/stack/centrl/render/v1:rnpb_go_compiled_sources",
        "//build/stack/livegrep/v1:livegrep_go_compiled_sources",
        "//build/stack/starlark/v1beta1:v1beta1_go_compiled_sources",
        "//stardoc_output:stardoc_output_go_compiled_sources",
    ],
)

starlark_bundle(
    name = "docs",
    visibility = ["//visibility:public"],
    deps = [
        "@stackb_centrl//cmd/renderhtml:libhtml",
        "@stackb_centrl//cmd/starlarkcompiler/tests:libexample",
        "@stackb_centrl//rules:libarchive_override",
        "@stackb_centrl//rules:libdeploy",
        "@stackb_centrl//rules:libgit_override",
        "@stackb_centrl//rules:liblocal_path_override",
        "@stackb_centrl//rules:libmodule_attestations",
        "@stackb_centrl//rules:libmodule_commit",
        "@stackb_centrl//rules:libmodule_dependency",
        "@stackb_centrl//rules:libmodule_dependency_cycle",
        "@stackb_centrl//rules:libmodule_maintainer",
        "@stackb_centrl//rules:libmodule_metadata",
        "@stackb_centrl//rules:libmodule_presubmit",
        "@stackb_centrl//rules:libmodule_registry",
        "@stackb_centrl//rules:libmodule_source",
        "@stackb_centrl//rules:libmodule_version",
        "@stackb_centrl//rules:libocticons_closure_template_compile",
        "@stackb_centrl//rules:libproviders",
        "@stackb_centrl//rules:librelease",
        "@stackb_centrl//rules:librepository_metadata",
        "@stackb_centrl//rules:libserve",
        "@stackb_centrl//rules:libsingle_version_override",
    ],
)
