module(
    name = "centrl",
    version = "0.0.0",
    compatibility_level = 1,
)

# -------------------------------------------------------------------
# Bazel Dependencies
# -------------------------------------------------------------------

bazel_dep(name = "bazel_difftools", version = "0.0.0")
bazel_dep(name = "build_stack_rules_proto", version = "4.1.1")
bazel_dep(name = "build_stack_ui_js", version = "0.0.0")
bazel_dep(name = "gazelle", version = "0.45.0", repo_name = "bazel_gazelle")
bazel_dep(name = "io_bazel_rules_closure", version = "1.0.0")
bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_tsickle", version = "1.0.0")

# -------------------------------------------------------------------
# Dev  Dependencies
# -------------------------------------------------------------------

bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2", dev_dependency = True)

# -------------------------------------------------------------------
# Overrides
# -------------------------------------------------------------------

# Commit: 37aa57e3122fd6e1aeb43ba197ff2a9321f7f8cc
# Date: 2025-10-09 05:25:00 +0000 UTC
# URL: https://github.com/stackb/rules_closure/commit/37aa57e3122fd6e1aeb43ba197ff2a9321f7f8cc
#
# Resolve maven dep issues
# Size: 5019879 (5.0 MB)
# archive_override(
#     module_name = "io_bazel_rules_closure",
#     sha256 = "c7368e52196fab7135b4661beb35112d4a82f199667f448976cc5fd1bb9f1c78",
#     strip_prefix = "rules_closure-37aa57e3122fd6e1aeb43ba197ff2a9321f7f8cc",
#     urls = ["https://github.com/stackb/rules_closure/archive/37aa57e3122fd6e1aeb43ba197ff2a9321f7f8cc.tar.gz"],
# )

# Commit: 04fc63fb40bf30d2e5e0b3786028eb41218de979
# Date: 2025-10-09 04:43:15 +0000 UTC
# URL: https://github.com/stackb/rules_proto/commit/04fc63fb40bf30d2e5e0b3786028eb41218de979
#
# Remove lock file for @maven
#
# It is shared by multiple workspaces and seems to cause problems when locked
# Size: 4088796 (4.1 MB)
archive_override(
    module_name = "build_stack_rules_proto",
    sha256 = "aff21579deef91316c726582bec71c621dde2ae2ec74099a55b637bda8997333",
    strip_prefix = "rules_proto-04fc63fb40bf30d2e5e0b3786028eb41218de979",
    urls = ["https://github.com/stackb/rules_proto/archive/04fc63fb40bf30d2e5e0b3786028eb41218de979.tar.gz"],
)

# local_path_override(
#     module_name = "build_stack_rules_proto",
#     path = "/Users/pcj/go/src/github.com/stackb/rules_proto",
# )

local_path_override(
    module_name = "io_bazel_rules_closure",
    path = "/Users/pcj/go/src/github.com/bazelbuild/rules_closure",
)

local_path_override(
    module_name = "rules_tsickle",
    path = "/Users/pcj/go/src/github.com/stackb/rules_tsickle",
)

local_path_override(
    module_name = "bazel_difftools",
    path = "/Users/pcj/go/src/github.com/stackb/bazel-aquery-differ",
)

local_path_override(
    module_name = "build_stack_ui_js",
    path = "/Users/pcj/go/src/github.com/stackb/ui.js",
)

# -------------------------------------------------------------------
# Overrides
# -------------------------------------------------------------------

# NOTE: cannot upgrade past protobuf editions...
#
# Commit: 263ee701cba6b75e1f8eddad5adcdf74718318b1
# Date: 2025-10-08 21:32:22 +0000 UTC
# URL: https://github.com/protocolbuffers/protobuf-javascript/commit/263ee701cba6b75e1f8eddad5adcdf74718318b1
#
# remove writeZigzagVarint64BigInt
# Size: 401599 (402 kB)
archive_override(
    module_name = "protobuf_javascript",
    patch_strip = 1,
    patches = ["protobuf_javascript.patch"],
    sha256 = "8a50071fbca5e4a26361e6c9d81dd842207f0005f7cc1720226f20c25a231805",
    strip_prefix = "protobuf-javascript-263ee701cba6b75e1f8eddad5adcdf74718318b1",
    urls = ["https://github.com/protocolbuffers/protobuf-javascript/archive/263ee701cba6b75e1f8eddad5adcdf74718318b1.tar.gz"],
)

# -------------------------------------------------------------------
# Configuration: Go
# -------------------------------------------------------------------

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")
use_repo(
    go_sdk,
    go_sdk = "go_default_sdk",
)

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_amenzhinsky_go_memexec",
    "com_github_bazelbuild_buildtools",
    "com_github_dominikbraun_graph",
    "com_github_rs_zerolog",
    "in_gopkg_yaml_v3",
    "net_starlark_go",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)

# -------------------------------------------------------------------
# Configuration: Gazelle
# -------------------------------------------------------------------
