load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")
load("@build_stack_rules_proto//rules:proto_compiled_sources.bzl", "proto_compiled_sources")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@stackb_rules_closure//closure/protobuf:defs.bzl", "closure_jspb_library")
load("//bazel_tools/rust:proto_rust_library.bzl", "proto_rust_library")

proto_library(
    name = "builtin_proto",
    srcs = ["builtin.proto"],
    visibility = ["//visibility:public"],
)

proto_compiled_sources(
    name = "builtin_go_compiled_sources",
    srcs = ["builtin.pb.go"],
    output_mappings = ["builtin.pb.go=github.com/bazel-contrib/bcr-frontend/builtin/builtin.pb.go"],
    plugins = ["@build_stack_rules_proto//plugin/golang/protobuf:protoc-gen-go"],
    proto = "builtin_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "builtin",
    srcs = ["builtin.pb.go"],
    importpath = "github.com/bazel-contrib/bcr-frontend/builtin",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)

proto_compile(
    name = "builtin_js_proto",
    outputs = ["builtin.js"],
    plugins = ["@stackb_rules_closure//closure/protobuf:protoc-gen-js"],
    proto = "builtin_proto",
)

closure_jspb_library(
    name = "builtin_js",
    srcs = [":builtin_js_proto"],
    internal_descriptors = [":builtin_proto"],
    visibility = ["//visibility:public"],
)

proto_compile(
    name = "builtin_proto_rs",
    outputs = [
        "builtin.rs",
        "builtin.serde.rs",
    ],
    plugins = [
        "//bazel_tools/rust:protoc-gen-prost",
        "//bazel_tools/rust:protoc-gen-prost-serde",
    ],
    proto = "builtin_proto",
    verbose = False,
)

proto_rust_library(
    name = "builtin_rs",
    srcs = [":builtin_proto_rs"],
    pkg = "builtin",
    visibility = ["//visibility:public"],
)
