load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("@rules_tsickle//rules:defs.bzl", "closure_ts_compile")
load(
    "@stackb_rules_closure//closure:defs.bzl",
    "closure_css_binary",
    "closure_css_library",
    "closure_js_binary",
    "closure_js_library",
    "closure_js_template_library",
    "closure_js_test",
)
load("//rules:deploy.bzl", "cloudflare_deploy")
load("//rules:ghpages.bzl", "ghpages_deploy")
load("//rules:octicons_closure_template_compile.bzl", "octicons_closure_template_compile")
load("//rules:prerender.bzl", "prerender_home", "prerender_pages")
load("//rules:release.bzl", "release_archive")

string_flag(
    name = "release_type",
    build_setting_default = "debug",
    values = [
        "dummy",  # points to //data/dummy:modules - when submodule may not be initialized but still want to build //app/bcr:release
        "debug",
        "production",
    ],
    visibility = ["//visibility:public"],
)

string_flag(
    name = "docs_release",
    build_setting_default = "on",
    values = [
        "off",
        "on",
    ],
    visibility = ["//visibility:public"],
)

# Whether to prerender every module's "latest version" page into the release
# tarball. Production deploys default to "on" so search engines and direct
# loads hit fully-rendered HTML. Override to "off" while iterating on the
# SPA (main.js, soy templates) — this skips the ~10-15 minute prerender_pages
# step but still runs the (~30s) home-page prerender. The home page is gated
# only by release_type=production.
string_flag(
    name = "prerender_modules",
    build_setting_default = "on",
    values = [
        "off",
        "on",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "is_docs_release",
    flag_values = {
        ":docs_release": "on",
    },
)

# Active when both production release AND module prerender are on.
# Used to gate the prerendered_pages_tar input on :release.
config_setting(
    name = "should_prerender_modules",
    flag_values = {
        ":release_type": "production",
        ":prerender_modules": "on",
    },
)

config_setting(
    name = "is_debug_release",
    flag_values = {
        ":release_type": "debug",
    },
)

config_setting(
    name = "is_dummy_release",
    flag_values = {
        ":release_type": "dummy",
    },
)

config_setting(
    name = "is_production_release",
    flag_values = {
        ":release_type": "production",
    },
)

# NOTE: closure-templates seems to have issues compiling generated .soy files
# (or the import path becomes confusing). This rule builds the .soy generated
# file, and is also a runnable rule that copies it back into the source tree.
# Regenerate as needed.
#
# ProTip: bazel run //app/bcr:octicons
octicons_closure_template_compile(
    name = "octicons",
)

closure_css_library(
    name = "style_closure_css",
    srcs = ["style.closure.css"],
)

closure_css_binary(
    name = "css",
    debug = select({
        ":is_debug_release": True,
        "//conditions:default": False,
    }),
    renaming = True,
    visibility = ["//visibility:public"],
    deps = [":style_closure_css"],
)

closure_js_template_library(
    name = "soy",
    srcs = [
        "app.soy",
        "maintainers.soy",
        "octicons.soy",
        "registry.soy",
        "settings.soy",
        "treeview.soy",
        "uri.soy",
    ],
    deps = [
        "//build/stack/bazel/registry/v1:bzpb_js",
        "//build/stack/bazel/symbol/v1:sympb_js",
        "//build/stack/starlark/v1beta1:v1beta1_js",
        "//stardoc_output:stardoc_output_js",
    ],
)

closure_ts_compile(
    name = "shiki",
    srcs = ["shiki.d.ts"],
)

closure_js_library(
    name = "common",
    srcs = [
        "common.js",
        "mvs.js",
    ],
    deps = [
        "//build/stack/bazel/registry/v1:bzpb_js",
        "@stackb_rules_closure//closure/goog/asserts",
        "@stackb_rules_closure//closure/goog/dom",
        "@stackb_rules_closure//closure/goog/ui/ac:autocomplete",
        "@stackb_rules_closure//closure/goog/ui/ac:cachingmatcher",
        "@stackb_rules_closure//closure/goog/ui/ac:inputhandler",
        "@stackb_rules_closure//closure/goog/ui/ac:renderer",
        "@stackb_ui_js//js/ui:core",
        "@stackb_ui_js//js/ui:keyboard",
        "@stackb_ui_js//js/ui:select",
    ],
)

closure_js_library(
    name = "autocompletematcher",
    srcs = [
        "autocompletematcher.js",
        "heap.js",
    ],
    deps = [
        "@stackb_rules_closure//closure/goog/asserts",
        "@stackb_rules_closure//closure/goog/string",
    ],
)

closure_js_library(
    name = "registry",
    srcs = ["registry.js"],
    deps = [
        "//build/stack/bazel/registry/v1:bzpb_js",
        "@stackb_rules_closure//closure/goog/string",
    ],
)

closure_js_test(
    name = "registry_test",
    srcs = ["registry_test.js"],
    compilation_level = "ADVANCED",
    entry_points = ["goog:bcrfrontend.registryTest"],
    deps = [
        ":registry",
        "//build/stack/bazel/registry/v1:bzpb_js",
        "@stackb_rules_closure//closure/goog/testing:asserts",
        "@stackb_rules_closure//closure/goog/testing:jsunit",
        "@stackb_rules_closure//closure/goog/testing:testsuite",
    ],
)

closure_js_library(
    name = "starlark",
    srcs = ["starlark.js"],
    deps = [
        "//build/stack/bazel/registry/v1:bzpb_js",
        "//build/stack/bazel/symbol/v1:sympb_js",
        "//build/stack/starlark/v1beta1:v1beta1_js",
        "//stardoc_output:stardoc_output_js",
    ],
)

closure_js_test(
    name = "starlark_test",
    srcs = ["starlark_test.js"],
    compilation_level = "ADVANCED",
    entry_points = ["goog:bcrfrontend.starlarkTest"],
    deps = [
        ":starlark",
        "//build/stack/bazel/registry/v1:bzpb_js",
        "//build/stack/bazel/symbol/v1:sympb_js",
        "//build/stack/starlark/v1beta1:v1beta1_js",
        "//stardoc_output:stardoc_output_js",
        "@stackb_rules_closure//closure/goog/testing:asserts",
        "@stackb_rules_closure//closure/goog/testing:jsunit",
        "@stackb_rules_closure//closure/goog/testing:testsuite",
    ],
)

closure_js_library(
    name = "app",
    srcs = [
        "app.js",
        "body.js",
        "clipboard.js",
        "contentcomponent.js",
        "contentselect.js",
        "documentation.js",
        "documentation_search.js",
        "format.js",
        "githubsourcefile.js",
        "home.js",
        "language.js",
        "main.js",
        "maintainers.js",
        "markdown.js",
        "module_search.js",
        "modules.js",
        "mvs_tree.js",
        "presubmit.js",
        "search.js",
        "selectnav.js",
        "settings.js",
        "syntax.js",
        "treeview.js",
        ":shiki",
    ],
    deps = [
        ":autocompletematcher",
        ":common",
        ":registry",
        ":soy",
        ":starlark",
        "//build/stack/bazel/registry/v1:bzpb_js",
        "//build/stack/bazel/symbol/v1:sympb_js",
        "//build/stack/starlark/v1beta1:v1beta1_js",
        "//stardoc_output:stardoc_output_js",
        "@stackb_rules_closure//closure/goog/array",
        "@stackb_rules_closure//closure/goog/asserts",
        "@stackb_rules_closure//closure/goog/crypt:base64",
        "@stackb_rules_closure//closure/goog/date",
        "@stackb_rules_closure//closure/goog/date:relative",
        "@stackb_rules_closure//closure/goog/dom",
        "@stackb_rules_closure//closure/goog/dom:classlist",
        "@stackb_rules_closure//closure/goog/dom:dataset",
        "@stackb_rules_closure//closure/goog/events",
        "@stackb_rules_closure//closure/goog/events:eventtype",
        "@stackb_rules_closure//closure/goog/events:listenable",
        "@stackb_rules_closure//closure/goog/soy",
        "@stackb_rules_closure//closure/goog/string",
        "@stackb_rules_closure//closure/goog/string:path",
        "@stackb_rules_closure//closure/goog/structs:treenode",
        "@stackb_rules_closure//closure/goog/structs:trie",
        "@stackb_rules_closure//closure/goog/style",
        "@stackb_rules_closure//closure/goog/ui:component",
        "@stackb_rules_closure//closure/goog/ui/ac:autocomplete",
        "@stackb_rules_closure//closure/goog/ui/ac:renderer",
        "@stackb_rules_closure//closure/goog/ui/tree:treecontrol",
        "@stackb_rules_closure//closure/goog/ui/tree:treenode",
        "@stackb_rules_closure//closure/protobuf:jspb",
        "@stackb_rules_closure//google3/third_party/javascript/safevalues",
        "@stackb_rules_closure//google3/third_party/javascript/safevalues/dom/elements",
        "@stackb_ui_js//js/ui:core",
        "@stackb_ui_js//js/ui:select",
    ],
)

closure_js_binary(
    name = "bcr",
    compilation_level = "ADVANCED",  # "SIMPLE",
    css = ":css",
    debug = select({
        ":is_debug_release": True,
        "//conditions:default": False,
    }),
    entry_points = ["goog:bcr.main"],
    language = "ECMASCRIPT_2021",
    output_wrapper = "(function(){%output%}).call(this);" + select({
        ":is_debug_release": "\n\n//# sourceMappingURL=bcr.js.map",
        "//conditions:default": "",
    }),
    deps = [":app"],
)

# capture specific outputs of module_registry
[
    filegroup(
        name = output_group,
        srcs = select({
            ":is_dummy_release": ["//data/dummy:modules"],
            "//conditions:default": ["//data/bazel-central-registry/modules"],
        }),
        output_group = output_group,
    )
    for output_group in [
        "colors_css",
        "sitemap_xml",
        "prerender_urls",
        "robots_txt",
        "registry_pb",
        "registrylite_pb",
        "symbols_pb",
        "doc_results",
    ]
]

# concatenates css into a single file
genrule(
    name = "bcr_css",
    srcs = [
        ":colors_css",  # generated language colors
        ":css",  # css renamed rules
        "style.css",  # unrenamed rules
    ],
    outs = ["bcr.css"],
    cmd = "cat $(SRCS) > $@",
)

# Common attributes for both the prerendered and unprerendered release targets.
RELEASE_SRCS = [
    "favicon.png",
    ":registrylite_pb",
    ":robots_txt",
    ":sitemap_xml",
] + select({
    ":is_debug_release": ["bcr.js.map"],
    "//conditions:default": [],
})

RELEASE_HASHED_SRCS = [
    ":bcr.css",
    ":bcr.js",
]

# Vanilla release that always uses the index.html template. Used as the input
# to :prerender_home (which serves it via releaseserver while headless Chrome
# captures a snapshot of the rendered home page).
release_archive(
    name = "release_unprerendered",
    srcs = RELEASE_SRCS,
    hashed_srcs = RELEASE_HASHED_SRCS,
    index_html = "index.html",
    module_registry_symbols_file = "symbols_pb",
    modules_srcs = [":doc_results"],
    registry_file = ":registrylite_pb",
    worker_modules = ["//app/api"],
)

# Snapshot of the home page (/) rendered by hermetic chrome-headless-shell
# from rules_browsers. The output is a fully-rendered index.html — placeholder
# substitutions (e.g., {bcr.js} -> bcr.<hash>.js) have already happened in
# :release_unprerendered, so the snapshot references the same hashed assets
# that :release will ultimately ship.
prerender_home(
    name = "prerender_home",
    chromium = "@rules_browsers//browsers/chromium:chromium",
    path = "/",
    releaseserver = "//cmd/releaseserver",
    statichtmlcompiler = "//cmd/statichtmlcompiler",
    tarball = ":release_unprerendered",
)

# Prerender every module's "latest version" page, e.g. /modules/rules_buf.
# Output is a tar containing entries at modules/<name>/index.html that the
# main :release target merges in verbatim. Concurrency × single-context tabs
# is much faster than one-tab-per-URL because the SPA stays loaded and only
# pushState/popstate fires per module.
prerender_pages(
    name = "prerender_pages",
    chromium = "@rules_browsers//browsers/chromium:chromium",
    concurrency = 4,
    releaseserver = "//cmd/releaseserver",
    settle_ms = 300,
    statichtmlcompiler = "//cmd/statichtmlcompiler",
    tarball = ":release_unprerendered",
    timeout_seconds = 30,
    url_list = ":prerender_urls",
)

# builds the release.tar.
#
# In production, the served index.html is the prerendered home page; other
# routes still SPA-bootstrap from the same file. For debug/dummy builds we
# use the template index.html unchanged (faster builds, no headless Chrome).
#
# ProTip: bazel run //app/bcr:release for development server
release_archive(
    name = "release",
    srcs = RELEASE_SRCS,
    hashed_srcs = RELEASE_HASHED_SRCS,
    index_html = select({
        ":is_production_release": ":prerender_home",
        "//conditions:default": "index.html",
    }),
    module_registry_symbols_file = "symbols_pb",
    modules_srcs = [":doc_results"],
    prerendered_pages_tar = select({
        ":should_prerender_modules": ":prerender_pages",
        "//conditions:default": None,
    }),
    registry_file = ":registrylite_pb",
    worker_modules = ["//app/api"],
)

cloudflare_deploy(
    name = "deploy",
    account_id = "df53dccd72b4a61d2f8b1323256bc71c",
    project = "centrl",
    tarball = ":release",
    worker_modules = ["//app/api"],
    worker_script = "worker.mjs",
)

ghpages_deploy(
    name = "ghpages",
    tarball = ":release",
)
